--- a/hello_world/base/kustomization.yaml
+++ b/hello_world/base/kustomization.yaml
@@ -1,7 +1,7 @@
 # Example configuration for the webserver
 # at https://github.com/monopole/hello
 commonLabels:
-  app: hello
+  app: my-hello
 
 resources:
 - deployment.yaml
